--- a/examples/counter-flow/package.json
+++ b/examples/counter-flow/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "description": "Redux counter example",
   "scripts": {
-    "start": "node server.js",
-    "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register",
-    "test:watch": "npm test -- --watch"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,10 +15,14 @@
   },
   "homepage": "http://redux.js.org",
   "dependencies": {
+    "babel-polyfill": "^6.13.0",
+    "classnames": "^2.2.5",
+    "immutable": "^3.8.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.2.1",
-    "redux": "^3.2.1"
+    "redux": "^3.2.1",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.15",
@@ -29,7 +31,9 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.3.13",
+    "body-parser": "^1.15.2",
     "cross-env": "^1.0.7",
     "enzyme": "^2.0.0",
     "expect": "^1.6.0",
